# youtube_avter_system

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.prod.yml  gcs-lifecycle.json  package-lock.json  playwright.config.ts
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  Dockerfile.celery  Dockerfile.celery_beat  MINIMAX_SETUP.md  REDIS_CACHE_IMPLEMENTATION.md  SLICE_4B_COMPLETED.md  alembic.ini  cloudbuild-celery-beat.yaml  cloudbuild-celery-worker.yaml  cloudbuild.yaml  requirements.txt  test_audio_gcs_simple.py  test_audio_with_gcs.py  test_expert_review.py  test_gcs_service.py  test_minimax_api.py  test_monitoring_without_slack.py  test_production_apis.py  test_redis_cache.py  test_research_api.py  test_social_blade_service.py  test_social_blade_simple.py
docs/: API_KEYS_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  GITHUB_SECRETS_SETUP.md  PRODUCTION_CHECKLIST.md  SCOPE_PROGRESS.md  SERVICE_FILE_SPLIT_PLAN.md  SERVICE_SPLIT_FILES.md  SERVICE_SPLIT_FINAL_REPORT.md  SERVICE_SPLIT_QUICK_REFERENCE.md  SERVICE_SPLIT_SUMMARY.md  SERVICE_SPLIT_VISUALIZATION.md  UPSTASH_QUICKSTART.md  agent-operation-manual.md  e2e-best-practices.md  lp-copy.md  production-readiness-report.html  quality-standards.md  requirements.md  test-results-advanced.md
frontend/: .env.example  .eslintignore  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vercel.json  (+2 more)
mcp-server/: README.md  claude_desktop_config.example.json  pyproject.toml  server.py
(+344 files in other folders)
